[package]
name = "adventofcode-2018"
version = "0.1.0"
authors = ["Axel Örn Sigurðsson <axel@absalon.is>"]
edition = "2018"

[dependencies]
regex = "1.1.0"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"
